<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:background="@drawable/nenchinh"
    android:orientation="vertical">

    <ImageView
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:src="@drawable/panner"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnStart"
        style="@style/nut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/btnAbout"
        style="@style/nut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:text="@string/about" />

    <Button
        android:id="@+id/btnExit"
        style="@style/nut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:text="@string/exit" />

</LinearLayout>